--- a/views/library.handlebars
+++ b/views/library.handlebars
@@ -33,7 +33,7 @@
 			  <div class="collapse navbar-collapse" id="navbarNav">
 			    <ul class="navbar-nav">
 			      <li class="nav-item active">
-			        <a class="nav-link" href="library">Home<span class="sr-only">(current)</span></a>
+			        <a class="nav-link" href="library"><font color="#651fff">Home</font><span class="sr-only">(current)</span></a>
 			      </li>
 			      <li class="nav-item">
 			        <a class="nav-link" href="stats">Stats</a>
@@ -67,11 +67,17 @@
 	  <ul class="list-group" id="workoutList">
 	  <li class="list-group-item justify-content-between">
 	  	<p class="workoutname"> {{name}} <small class="durationText"> 5 min.</small>
+
+	  	<div class="row">
+	  		<div class="col-md-2 col-lg-12">
 		<button type="button" class="start-btn" id="start-btn" onclick="startWorkout()" aria-label="Left Align">
 		<p>Start Workout</p></button>
 		<button type="button" class="edit-btn" onclick="editWorkout()" id="editbtn" aria-label="Left Align">
 	  		<p>Edit</p>
 		</button></p>	
+			</div>
+		</div>
+
 		{{#each this.exercises}}
 		<p class="exercise"> {{exname}} ({{this.time}} {{this.unit}}) </p>
 		{{/each}}
