--- a/views/timer.handlebars
+++ b/views/timer.handlebars
@@ -12,6 +12,10 @@
     <link href="css/bootstrap.css" rel="stylesheet">
 	<link href="css/index.css" rel="stylesheet">
 
+	<style>
+	@import url('https://fonts.googleapis.com/css?family=Karla');
+	</style>
+
 
 	<!-- this is a comment in HTML -->
 
@@ -30,13 +34,15 @@
 			  <div class="collapse navbar-collapse" id="navbarNav">
 			    <ul class="navbar-nav">
 			      <li class="nav-item active">
-			        <a class="nav-link" href="library">Home<span class="sr-only">(current)</span></a>
+			        <a class="nav-link" href="library"><font color="gray">Home</font>
+			        	<span class="sr-only">(current)</span>
+			        </a>
 			      </li>
 			      <li class="nav-item">
-			        <a class="nav-link" href="stats">Stats</a>
+			        <a class="nav-link" href="stats"> <font color="gray">Stats</font></a>
 			      </li>
 			      <li class="nav-item">
-			        <a class="nav-link" href="Timer">Timer</a>
+			        <a class="nav-link" href="Timer"><font color="#651fff">Timer</font></a>
 			      </li>
 			   <!--    <li class="nav-item">
 			        <a class="nav-link" href="settings">Settings</a>
