--- a/views/library.handlebars
+++ b/views/library.handlebars
@@ -32,7 +32,7 @@
 			  </button>
 			  <div class="collapse navbar-collapse" id="navbarNav">
 			    <ul class="navbar-nav">
-			      <li class="nav-item active">
+			      <li class="nav-item-active">
 			        <a class="nav-link" href="library"><font color="#651fff">Home</font><span class="sr-only">(current)</span></a>
 			      </li>
 			      <li class="nav-item">
@@ -64,32 +64,28 @@
 
 	{{#each workout}}
 	<div class="exercise">
-	  <ul class="list-group" id="workoutList">
-	  <li class="list-group-item justify-content-between">
-	  	<p class="workoutname"> {{name}} <small class="durationText"> 5 min.</small>
-
-	  	<div class="row">
-	  		<div class="col-md-2 col-lg-12">
-		<button type="button" class="start-btn" id="start-btn" onclick="startWorkout()" aria-label="Left Align">
-		<p>Start Workout</p></button>
-		<a href="/addworkout/{{@index}}">
-		<button type="button" class="edit-btn" id="editbtn" aria-label="Left Align">
-	  		<p>Edit</p>
-<<<<<<< HEAD
-		</button></p>	
+		
+		  <ul class="list-group" id="workoutList">
+		  <li class="list-group-item justify-content-between">
+		  	<p class="workoutname"> {{name}} <small class="durationText"> 5 min.</small>
+		  	<div class="row">
+	    		<div class="col-md-2 col-lg-12">
+				<button type="button" class="start-btn" id="start-btn" onclick="startWorkout()" aria-label="Left Align">
+				<p>Start Workout</p></button>
+				<a href="/addworkout/{{@index}}">
+				<button type="button" class="edit-btn" id="editbtn" aria-label="Left Align">
+			  		<p>Edit</p>
+				</button>	
+				</div>
 			</div>
-		</div>
-
-=======
-		</button>	
-		</a>
->>>>>>> c45a1004d1a940dea01eb218ce4b5d29babfd179
-		{{#each this.exercises}}
-		<p class="exercise"> {{exname}} ({{this.time}} {{this.unit}}) </p>
-		{{/each}}
+				</a>
+				{{#each this.exercises}}
+				<p class="exercise"> {{exname}} ({{this.time}} {{this.unit}}) </p>
+				{{/each}}
+		
 	  </li>
 	  </ul>
-	</div>
+		
 	{{/each}}
 
 </body>
