--- a/public/css/index.css
+++ b/public/css/index.css
@@ -507,3 +507,12 @@ input#pwd.form-control{
     color: #3F4A4F;
     height: 40px;
 }
+
+button#dropdownMenuButton.btn.btn-secondary.dropdown-toggle{
+    background-color: #ffffff;
+    width: 80px;
+    height: 40px;
+    color: #3F4A4F;
+    font-size: 16px;
+    box-shadow: 0px 2px 4px 0px #00000020;
+}
