--- a/views/addworkout.handlebars
+++ b/views/addworkout.handlebars
@@ -31,7 +31,7 @@
 			  <div class="collapse navbar-collapse" id="navbarNav">
 			    <ul class="navbar-nav">
 			      <li class="nav-item active">
-			        <a class="nav-link" href="../library">Home<span class="sr-only">(current)</span></a>
+			        <a class="nav-link" href="../library"><font color="#651fff">Library</font><span class="sr-only">(current)</span></a>
 			      </li>
 			      <li class="nav-item">
 			        <a class="nav-link" href="../stats">Stats</a>
