--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -29,7 +29,7 @@
 			  <div class="collapse navbar-collapse" id="navbarNav">
 			    <ul class="navbar-nav">
 			      <li class="nav-item active">
-			        <a class="nav-link" href="library"><font color="#651fff">Home</font><span class="sr-only">(current)</span></a>
+			        <a class="nav-link" href="library"><font color="#651fff">Library</font><span class="sr-only">(current)</span></a>
 			      </li>
 			      <li class="nav-item">
 			        <a class="nav-link" href="stats">Stats</a>
@@ -56,10 +56,13 @@
 		  <input type="password" class="form-control" id="pwd">
 		  <br/>
 		  <button class="btn" onclick="submitClicked()" id="submit">Submit</button>
+		  <br></br>
+		  <br>
 			<fb:login-button 
 			  scope="public_profile,email"
 			  onlogin="checkLoginState();">
 			</fb:login-button>
+		</br>
 		</div>
 
 
