--- a/views/stats.handlebars
+++ b/views/stats.handlebars
@@ -33,7 +33,7 @@
 			  <div class="collapse navbar-collapse" id="navbarNav">
 			    <ul class="navbar-nav">
 			      <li class="nav-item active">
-			        <a class="nav-link" href="library"><font color="gray">Home</font><span class="sr-only">(current)</span></a>
+			        <a class="nav-link" href="library"><font color="gray">Library</font><span class="sr-only">(current)</span></a>
 			      </li>
 			      <li class="nav-item">
 			        <a class="nav-link" href="stats"> <font color="#651fff">Stats</font></a>
