--- a/views/timer.handlebars
+++ b/views/timer.handlebars
@@ -34,7 +34,7 @@
 			  <div class="collapse navbar-collapse" id="navbarNav">
 			    <ul class="navbar-nav">
 			      <li class="nav-item active">
-			        <a class="nav-link" href="library"><font color="gray">Home</font>
+			        <a class="nav-link" href="library"><font color="gray">Library</font>
 			        	<span class="sr-only">(current)</span>
 			        </a>
 			      </li>
