--- a/public/css/index.css
+++ b/public/css/index.css
@@ -73,7 +73,7 @@ a{
 }
 
 .start-btn{
-    width: 180px;
+    width: 107px;
     height: 33px;
     font-size: 18px;
     font-weight: 100;
@@ -83,6 +83,7 @@ a{
     border-radius: 25px;
     box-shadow: 0px 2px 3px 0px #00000020;
     float: right;
+    margin-right: 10px;
     margin-top: 5px;
 
 }
