--- a/views/library.handlebars
+++ b/views/library.handlebars
@@ -68,7 +68,8 @@
 	  <li class="list-group-item justify-content-between">
 	  	<p class="workoutname"> {{name}} <small class="durationText"> 5 min.</small>
 		<!-- <a href="/custom/{{@index}}"> -->
-		<button type="button" class="start-btn" id="start-btn" onclick="startWorkout()" aria-label="Left Align"><p>Start Workout</p></button>
+		<button type="button" class="start-btn" id="start-btn" onclick="startWorkout()" aria-label="Left Align">Workout</button>
+		</p>
 		<!-- </a> -->
 		<a href="/addworkout/{{@index}}">
 		<button type="button" class="edit-btn" id="editbtn" aria-label="Left Align">
